--- a/css/style.scss
+++ b/css/style.scss
@@ -124,6 +124,7 @@ body{
     background: linear-gradient(rgba(0, 0, 0, 1), rgba(42, 21, 134, 0.4)), url(../img/stars.jpg);
     min-height: 70vh;
     margin: 0 0;
+    overflow-x: hidden;
 }
 .search{
     color: rgba($color: $text-lighter, $alpha: 0.9);
