--- a/css/style.scss
+++ b/css/style.scss
@@ -8,6 +8,11 @@ $font-family : 'Montserrat Subrayada';
 $font-family2 : 'Poppins';
 $text-lighter: rgb(255, 255, 255);
 $text-darker: rgb(27, 27, 27);
+$first-color: rgba(19, 16, 202, 0.5);
+$second-color: black;
+$third-color:rgba(255, 242, 242, 0.685);
+$fourth-color:  rgb(167, 87, 233);
+$black-opacity: rgba(3,3,3,0.5);
 
 //Base
 *{
@@ -30,7 +35,7 @@ body{
 //NavBar
 
 .bg-nav{
-    background-color: rgba(255, 242, 242, 0.685);
+    background-color: $third-color;
 }
 .navbar-light .navbar-nav .nav-link {
     font-size: 1.3rem;
@@ -47,7 +52,7 @@ body{
 //Home
 
 .homeSection{
-    background: linear-gradient(rgba(3, 3, 3, 0.5),rgba(19, 16, 202, 0.5)), url(../img/space.jpg);
+    background: linear-gradient($black-opacity, $first-color), url(../img/space.jpg);
     
     background-repeat: no-repeat;
     background-size: cover;
@@ -86,13 +91,12 @@ body{
 
 .aboutSection{
     min-height: 100vh;
-    background-color: black; 
+    background-color: $second-color;
 }
 
 .card{
-    //background: linear-gradient(rgba(102, 101, 101, 0.4), rgba(0, 0, 0, 0.4)), url(../img/stars.jpg);
-    background-color: rgba(255, 242, 242, 0.685);
-    color: black;
+    background-color: $third-color;
+    color: $second-color;
     font-weight: bold;
     .card-body{
         .card-title{
@@ -105,11 +109,11 @@ body{
 }
 
 .btn-primary{
-    background-color: rgba(19, 16, 202, 0.5);
+    background-color: $first-color;
     color: $text-lighter;
     border-color: transparent;
     &:hover{
-        background-color: rgba(3, 3, 3, 0.5);
+        background-color: $black-opacity;
         color: $text-lighter;
         border-color: transparent;
     }
@@ -121,7 +125,7 @@ body{
 //ImageSection
 
 .imageSection{
-    background: linear-gradient(rgba(0, 0, 0, 1), rgba(42, 21, 134, 0.4)), url(../img/stars.jpg);
+    background: linear-gradient( $second-color, rgba(42,21,134,0.5)), url(../img/stars.jpg);
     min-height: 70vh;
     margin: 0 0;
     overflow-x: hidden;
@@ -147,8 +151,8 @@ body{
 .form-control{
     color: rgb(56, 2, 100) !important;
     &:focus{
-        border-color: rgb(167, 87, 233);
-        box-shadow: 0 0 0 0.2rem rgba(160, 97, 212, 0.5);
+        border-color: $fourth-color;
+        box-shadow: 0 0 0 0.2rem $fourth-color;
 
     }
 }
