--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,13 @@ body {
   border-color: transparent;
 }
 
+.btn-primary:active, .btn-primary:focus {
+  background-color: rgba(3, 3, 3, 0.5) !important;
+  border-color: transparent !important;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 .imageSection {
   background: -webkit-gradient(linear, left top, left bottom, from(black), to(rgba(42, 21, 134, 0.5))), url(../img/stars.jpg);
   background: linear-gradient(black, rgba(42, 21, 134, 0.5)), url(../img/stars.jpg);
