--- a/css/style.scss
+++ b/css/style.scss
@@ -117,6 +117,11 @@ body{
         color: $text-lighter;
         border-color: transparent;
     }
+    &:active, &:focus{
+        background-color: $black-opacity !important ;
+        border-color: transparent !important;
+        box-shadow: none;
+    }
 }
 
 
